More stuff working. Editing is now working as well as completing todos. Going to implement the filters next.

--- a/src/assets/scss/default/app.scss
+++ b/src/assets/scss/default/app.scss
@@ -14,7 +14,7 @@
 // @include foundation-accordion-menu;
 // @include foundation-badge;
 // @include foundation-breadcrumbs;
-// @include foundation-button-group;
+@include foundation-button-group;
 // @include foundation-callout;
 // @include foundation-close-button;
 // @include foundation-drilldown-menu;
@@ -47,3 +47,4 @@
 @import 'ui/common';
 @import 'ui/todo-list';
 @import 'ui/todo-list-item';
+@import 'ui/todo-list-filters';
