--- a/src/assets/scss/default/ui/_todo-list.scss
+++ b/src/assets/scss/default/ui/_todo-list.scss
@@ -1,5 +1,5 @@
 .todo-list {
-    @include grid-row(12, 10);
+    //@include grid-row(12, 10);
     margin-top: 1rem;
 
     .todo-list__header {
@@ -8,7 +8,7 @@
         @include grid-column-position(center);
 
         input {
-            
+
         }
     }
 }
