--- a/src/assets/scss/default/ui/_common.scss
+++ b/src/assets/scss/default/ui/_common.scss
@@ -6,9 +6,15 @@
 }
 
 body {
-    background-color: $dark;
+  font-family: 'Helvetica', arial, sans-serif;
+  background-color: $dark;
 }
 
 #app {
-    
+  @include grid-row();
+}
+
+.todo-list-empty {
+  color: $light;
+  text-align: center;
 }
